AfterHome: Allow changing max lines for app label
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: S I P U N <sipunkumar85@gmail.com>

--- a/res/values/afterhome_strings.xml
+++ b/res/values/afterhome_strings.xml
@@ -104,5 +104,7 @@
 
      <!-- Font size -->
      <string name="font_size_title">Font size</string>
-</resources>
 
+     <!-- App label - max lines -->
+     <string name="icon_max_lines_title">Max lines for app label</string>
+</resources>
