--- a/res/xml/launcher_recents_preferences.xml
+++ b/res/xml/launcher_recents_preferences.xml
@@ -55,6 +55,13 @@
             android:defaultValue="false"
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
+        
+        <SwitchPreferenceCompat
+            android:key="pref_recents_lock"
+            android:title="@string/recents_lock_title"
+            android:defaultValue="true"
+            android:persistent="true"
+            launcher:iconSpaceReserved="false" />
 
         <SwitchPreference
             android:key="pref_recents_clear_all"
