AfterHome: Add a toggle for smartspace
[DennySPb]: adapt to 14-qpr2

Change-Id: I3b2681d51197642ba0957111db455937c0c376e8
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/res/values/afterhome_strings.xml
+++ b/res/values/afterhome_strings.xml
@@ -39,6 +39,7 @@
      <string name="interface_category_title">Interface</string>
      <string name="search_bar_category_title">Search bar</string>
      <string name="actions_category_title">Quick actions</string>
+     <string name="quickspace_category_title">At A Glance</string>
 
      <!-- Developer options -->
      <string name="dev_options_title">Developer options</string>
@@ -187,4 +188,8 @@
      <string name="restarting_launcher_changes">Restarting launcher to apply changes...</string>
      <string name="updating_launcher_components">Restarting launcher to update launcher
           components...</string>
+
+     <!-- Smartspace -->
+     <string name="smartspace_pref_title">At a Glance</string>
+     <string name="smartspace_pref_summary">Show smartspace at the top of home screen</string>
 </resources>
