--- a/res/drawable/bg_quickspace.xml
+++ b/res/drawable/bg_quickspace.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2016-2023 crDroid Android Project
+<!-- Copyright (C) 2018-2023 crDroid Android Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,11 +13,5 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-    <!-- Appseat -->
-    <color name="appseat_color">@*android:color/system_neutral2_50</color>
-
-    <!-- Logo Color -->
-    <color name="afterlife_logo_icon_color">?android:attr/textColorPrimary</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" />
