--- a/res/values/afterhome_config.xml
+++ b/res/values/afterhome_config.xml
@@ -43,4 +43,7 @@
 
     <!-- Themed Icon pack -->
     <string name="themed_icon_pack_settings_class" translatable="false">com.android.launcher3.icons.pack.ThemeIconsSettingsFragment</string>
+
+    <!-- Quickspace -->
+    <item type="id" name="reserved_container_workspace" />
 </resources>
