--- a/res/xml/app_info_preferences.xml
+++ b/res/xml/app_info_preferences.xml
@@ -22,12 +22,14 @@
         android:title="@string/app_info_version"
         android:summary="@string/placeholder_string"
         android:icon="@drawable/ic_app_info_version"
+        android:layout="@layout/settings_layout"
         android:persistent="false" />
 
     <Preference
         android:key="pref_app_info_last_update"
         android:title="@string/app_info_last_update"
         android:summary="@string/placeholder_string"
+        android:layout="@layout/settings_layout"
         android:icon="@drawable/ic_app_info_last_update"
         android:persistent="false" />
 
@@ -35,6 +37,7 @@
         android:key="pref_app_info_source"
         android:title="@string/app_info_source"
         android:summary="@string/placeholder_string"
+        android:layout="@layout/settings_layout"
         android:icon="@drawable/ic_app_info_source"
         android:persistent="false" />
 
@@ -42,12 +45,14 @@
         android:key="pref_app_info_icon_pack"
         android:title="@string/app_info_icon_pack"
         android:summary="@string/placeholder_string"
+        android:layout="@layout/settings_layout"
         android:icon="@drawable/ic_app_info_icon_pack"
         android:persistent="false" />
 
     <Preference
         android:key="pref_app_info_more"
         android:title="@string/app_info_more"
+        android:layout="@layout/settings_layout"
         android:icon="@drawable/ic_info_no_shadow"
         android:persistent="false" />
 
