--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -31,7 +31,7 @@
             android:summaryOff="@string/settings_lock_layout_summary_off"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_add_icon_to_home"
             android:title="@string/auto_add_shortcuts_label"
             android:summary="@string/auto_add_shortcuts_description"
@@ -41,7 +41,7 @@
             launcher:logIdOff="614"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_sleep_gesture"
             android:title="@string/pref_sleep_gesture_title"
             android:summary="@string/pref_sleep_gesture_summary"
@@ -49,28 +49,28 @@
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_allow_wallpaper_scrolling"
             android:title="@string/allow_wallpaper_scrolling"
             android:summary="@string/allow_wallpaper_scrolling_summary"
             android:defaultValue="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_allow_wallpaper_zooming"
             android:title="@string/allow_wallpaper_zooming"
             android:summary="@string/allow_wallpaper_zooming_summary"
             android:defaultValue="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_short_parallax"
             android:title="@string/short_parallax_title"
             android:summary="@string/short_parallax_summary"
             android:defaultValue="false"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_single_page_center"
             android:title="@string/single_page_center_title"
             android:summary="@string/single_page_center_summary"
@@ -82,13 +82,13 @@
     <PreferenceCategory
         android:title="@string/quickspace_category_title">
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_smartspace"
             android:title="@string/smartspace_pref_title"
             android:summary="@string/smartspace_pref_summary"
             android:defaultValue="true" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_enable_minus_one"
             android:title="@string/title_show_google_app"
             android:summary="@string/pref_show_google_now_summary"
@@ -100,28 +100,28 @@
     <PreferenceCategory
         android:title="@string/interface_category_title">
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_show_statusbar"
             android:title="@string/show_statusbar_title"
             android:defaultValue="true"
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_show_top_shadow"
             android:title="@string/show_top_shadow"
             android:defaultValue="true"
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
         
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_desktop_show_labels"
             android:title="@string/desktop_show_labels"
             android:defaultValue="true"
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_show_hotseat_bg"
             android:title="@string/hotseat_bg_title"
             android:summary="@string/hotseat_bg_summary"
@@ -143,14 +143,14 @@
     <PreferenceCategory
         android:title="@string/search_bar_category_title">
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_dock_search"
             android:title="@string/dock_search_title"
             android:summary="@string/dock_search_summary"
             android:defaultValue="true"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_dock_music_search"
             android:title="@string/dock_music_search_title"
             android:summary="@string/dock_music_search_summary"
@@ -158,7 +158,7 @@
             android:defaultValue="false"
             launcher:iconSpaceReserved="false" />
 
-        <SwitchPreferenceCompat
+        <SwitchPreference
             android:key="pref_dock_theme"
             android:title="@string/dock_theme_title"
             android:summary="@string/dock_theme_summary"
