--- a/res/xml/launcher_recents_preferences.xml
+++ b/res/xml/launcher_recents_preferences.xml
@@ -62,6 +62,13 @@
             android:defaultValue="true"
             android:persistent="true"
             launcher:iconSpaceReserved="false" />
+
+        <SwitchPreference
+            android:key="pref_recents_lock"
+            android:title="@string/recents_lock_title"
+            android:defaultValue="true"
+            android:persistent="true"
+            launcher:iconSpaceReserved="false" />
     </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
