--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -29,7 +29,8 @@
             android:title="@string/settings_lock_layout_title"
             android:summaryOn="@string/settings_lock_layout_summary_on"
             android:summaryOff="@string/settings_lock_layout_summary_off"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_top" />
 
         <SwitchPreference
             android:key="pref_add_icon_to_home"
@@ -39,7 +40,8 @@
             android:persistent="true"
             launcher:logIdOn="613"
             launcher:logIdOff="614"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_sleep_gesture"
@@ -47,35 +49,40 @@
             android:summary="@string/pref_sleep_gesture_summary"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_allow_wallpaper_scrolling"
             android:title="@string/allow_wallpaper_scrolling"
             android:summary="@string/allow_wallpaper_scrolling_summary"
             android:defaultValue="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_allow_wallpaper_zooming"
             android:title="@string/allow_wallpaper_zooming"
             android:summary="@string/allow_wallpaper_zooming_summary"
             android:defaultValue="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_short_parallax"
             android:title="@string/short_parallax_title"
             android:summary="@string/short_parallax_summary"
             android:defaultValue="false"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_single_page_center"
             android:title="@string/single_page_center_title"
             android:summary="@string/single_page_center_summary"
             android:defaultValue="false"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_bottom" />
 
     </PreferenceCategory>
 
@@ -85,30 +92,37 @@
         <SwitchPreference
             android:key="pref_show_statusbar"
             android:title="@string/show_statusbar_title"
+            android:summary="@string/show_statusbar_summary"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_top" />
 
         <SwitchPreference
             android:key="pref_show_top_shadow"
             android:title="@string/show_top_shadow"
+            android:summary="@string/show_top_shadow_summary"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
         
         <SwitchPreference
             android:key="pref_desktop_show_labels"
             android:title="@string/desktop_show_labels"
+            android:summary="@string/desktop_show_labels_summary"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_show_hotseat_bg"
             android:title="@string/hotseat_bg_title"
             android:summary="@string/hotseat_bg_summary"
             android:defaultValue="false"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_bottom" />
 
         <com.android.launcher3.settings.preferences.CustomSeekBarPreference
             android:key="pref_hotseat_opacity"
@@ -131,7 +145,8 @@
             android:summary="@string/show_quickspace_summary"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_top" />
 
         <SwitchPreferenceCompat
             android:key="pref_quickspace_psonality"
@@ -140,7 +155,8 @@
             android:dependency="pref_show_quickspace"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreferenceCompat
             android:key="pref_show_alt_quickspace"
@@ -149,7 +165,8 @@
             android:dependency="pref_show_quickspace"
             android:defaultValue="false"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreferenceCompat
             android:key="pref_quickspace_np"
@@ -158,7 +175,8 @@
             android:dependency="pref_show_quickspace"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreferenceCompat
             android:key="pref_quickspace_weather"
@@ -167,7 +185,8 @@
             android:dependency="pref_show_quickspace"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreferenceCompat
             android:key="pref_quickspace_weather_city"
@@ -176,7 +195,8 @@
             android:dependency="pref_quickspace_weather"
             android:defaultValue="false"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreferenceCompat
             android:key="pref_quickspace_weather_text"
@@ -185,7 +205,8 @@
             android:dependency="pref_quickspace_weather"
             android:defaultValue="true"
             android:persistent="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_bottom" />
 
     </PreferenceCategory>
 
@@ -197,7 +218,8 @@
             android:title="@string/dock_search_title"
             android:summary="@string/dock_search_summary"
             android:defaultValue="true"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_top" />
 
         <SwitchPreference
             android:key="pref_dock_music_search"
@@ -205,13 +227,15 @@
             android:summary="@string/dock_music_search_summary"
             android:dependency="pref_dock_search"
             android:defaultValue="false"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
             android:key="pref_dock_theme"
             android:title="@string/dock_theme_title"
             android:summary="@string/dock_theme_summary"
-            launcher:iconSpaceReserved="false" />
+            launcher:iconSpaceReserved="false"
+            launcher:layout="@layout/afl_preference_bottom" />
 
         <com.android.launcher3.settings.preferences.CustomSeekBarPreference
             android:key="pref_search_radius_size"
