--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2015 Google Inc.
+               (C) 2024 AfterlifeOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -18,12 +19,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:launcher="http://schemas.android.com/apk/res-auto">
 
+  <PreferenceCategory
+        android:layout="@layout/afterlife_logo"
+        android:selectable="true"
+        android:key="afterlife_logo">
+
     <Preference
         android:key="icons"
         android:title="@string/icons_category_title"
         android:summary="@string/icons_category_summary"
         android:icon="@drawable/ic_settings_icons"
-        android:layout="@layout/settings_layout">
+        launcher:layout="@layout/afl_preference_top_card">
     <intent
             android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
             android:targetPackage="com.android.launcher3"
@@ -35,7 +41,7 @@
         android:title="@string/home_category_title"
         android:summary="@string/home_category_summary"
         android:icon="@drawable/ic_settings_homescreen"
-        android:layout="@layout/settings_layout">
+        launcher:layout="@layout/afl_preference_middle_card">
     <intent
             android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
             android:targetPackage="com.android.launcher3"
@@ -47,7 +53,7 @@
         android:title="@string/app_drawer_category_title"
         android:summary="@string/app_drawer_category_summary"
         android:icon="@drawable/ic_settings_appdrawer"
-        android:layout="@layout/settings_layout">
+        launcher:layout="@layout/afl_preference_bottom_card">
     <intent
             android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
             android:targetPackage="com.android.launcher3"
@@ -59,7 +65,7 @@
         android:title="@string/recents_category_title"
         android:summary="@string/recents_category_summary"
         android:icon="@drawable/ic_settings_recents"
-        android:layout="@layout/settings_layout">
+        launcher:layout="@layout/afl_preference_top_card">
     <intent
             android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
             android:targetPackage="com.android.launcher3"
@@ -71,11 +77,13 @@
         android:title="@string/misc_category_title"
         android:summary="@string/misc_category_summary"
         android:icon="@drawable/ic_settings_misc"
-        android:layout="@layout/settings_layout">
+        launcher:layout="@layout/afl_preference_bottom_card">
     <intent
             android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
             android:targetPackage="com.android.launcher3"
             android:targetClass="com.android.launcher3.settings.SettingsMisc" />
     </Preference>
+
+  </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
