afterHome: Fix Swipe to google applications
Change-Id: Id45bfdf2298e185a652f1754e20b088d4954cee3
Signed-off-by: Mr- 0 <oldcrocs21@gmail.com>

--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -77,6 +77,14 @@
             launcher:layout="@layout/afl_preference_middle" />
 
         <SwitchPreference
+            android:key="pref_enable_minus_one"
+            android:title="@string/title_show_google_app"
+            android:summary="@string/pref_show_google_now_summary"
+            android:defaultValue="true"
+            launcher:iconSpaceReserved="false" 
+            launcher:layout="@layout/afl_preference_middle" />
+
+        <SwitchPreference
             android:key="pref_single_page_center"
             android:title="@string/single_page_center_title"
             android:summary="@string/single_page_center_summary"
